# comment-remover

./: Cargo.toml  README.md
.github/workflows/: build.yml  win_test.yml
src/: c_type.rs  go.rs  js.rs  lib.rs  main.rs  rust.rs  shell_type.rs  xml_type.rs
